[package]
name = "reset_ctrl"
version = "0.1.0"
description = "A platform for creating custom MIDI controllers"
keywords = ["midi", "embedded"]
edition = "2021"
license = "GPL-3.0-or-later"

[features]
bare-metal = []

[target.'cfg(target_os = "linux")'.dependencies]
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml = { version = "0.9" }

[target.'cfg(target_os = "none")'.dependencies]
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0" }
embedded-hal = { version = "0.2.6" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
nb = { version = "1.0.0" }

heapless = { version = "0.8", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "ee1aa80e3063de35a6f68c918a18b506d7f49539" }

[[bin]]
name = "stm32-poc"
required-features = ["bare-metal"]

[[bin]]
name = "stm32-encoder-poc"
required-features = ["bare-metal"]

[[bin]]
name = "stm32-usb-midi-poc"
required-features = ["bare-metal"]

[[bin]]
name = "stm32-encoder-async-poc"
required-features = ["bare-metal"]

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

